tests/ui/static/gc/fsa/recursive_calls.stderr
error: The drop method for `Wrapper<NotFinalizerSafe>` cannot be safely finalized.
  --> $DIR/recursive_calls.rs:31:13
   |
LL |     use_val(&x.0); // should fail
   |             ----
   |             |
   |             a finalizer cannot safely use this `T`
   |             from a drop method because it does not implement `Send` + `Sync`.
...
LL |     Gc::new(Wrapper(NotFinalizerSafe(1)));
   |     --------^^^^^^^^^^^^^^^^^^^^^^^^^^^^- caused by trying to construct a `Gc<Wrapper<NotFinalizerSafe>>` here.
   |
   = help: `Gc` runs finalizers on a separate thread, so drop methods
           must only use values which are thread-safe.

error: aborting due to 1 previous error

